--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
         "target": "es5",
+        "declaration": true,
         "module": "commonjs",
         "jsx": "react",
         "moduleResolution": "node",
@@ -9,7 +10,6 @@
         "sourceMap": true,
         "strict": true,
         "outDir": "./dist",
-        "typeRoots": ["./node_modules/@types/", "**/types/**/*.d.ts"],
         "baseUrl": "./src/",
         "allowSyntheticDefaultImports": true,
         "lib": ["es2015", "es2016", "es2017.object"]
